[Test][Fix] Fix import and warning